Update versions (#453)
* Update versions

* License